<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/purple"
    tools:context=".UI.UserActivity">

    <TextView
        android:id="@+id/text_get_start"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="84dp"
        android:fontFamily="@font/cabin"
        android:gravity="center"
        android:text="@string/get_start"
        android:textColor="@color/white"
        android:textSize="32sp" />

    <EditText
        android:id="@+id/edit_name_user"
        android:layout_width="280dp"
        android:layout_height="90dp"
        android:layout_below="@id/text_get_start"
        android:layout_centerInParent="true"
        android:layout_marginTop="212dp"
        android:fontFamily="@font/cabin"
        android:gravity="center"
        android:hint="@string/what_s_your_name"
        android:inputType="text"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textSize="24sp"
        tools:ignore="Autofill" />

    <Button
        android:id="@+id/button_save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="64dp"
        android:backgroundTint="@color/deep_purple_700"
        android:fontFamily="@font/cabin"
        android:paddingStart="32dp"
        android:paddingEnd="32dp"
        android:text="@string/save"
        android:textAllCaps="true"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textStyle="bold" />

</RelativeLayout>