<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UI.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:background="@color/purple"
        tools:ignore="UselessLeaf,UselessParent">

        <ImageView
            android:id="@+id/image_infinite"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:layout_weight="1"
            android:padding="8dp"
            android:src="@drawable/infinite_svgrepo_com"
            tools:ignore="ContentDescription" />

        <ImageView
            android:id="@+id/image_mood"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:layout_weight="1"
            android:padding="14dp"
            android:src="@drawable/mood_fill0_wght400_grad0_opsz24"
            tools:ignore="ContentDescription" />

        <ImageView
            android:id="@+id/image_sun"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:layout_weight="1"
            android:padding="14dp"
            android:src="@drawable/sun_2_svgrepo_com"
            tools:ignore="ContentDescription" />

    </LinearLayout>

    <TextView
        android:id="@+id/text_apresentation_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="80dp"
        android:textSize="18sp"
        android:fontFamily="@font/cabin"
        android:text="@string/hey_kotlin" />

    <TextView
        android:id="@+id/text_motivation_phrase"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:fontFamily="@font/cabin"
        android:textSize="18sp"
        android:text="@string/motivation_phrase"
        android:textAlignment="center"
        android:textStyle="bold" />

    <View
        android:layout_width="128dp"
        android:layout_height="4dp"
        android:layout_marginTop="16dp"
        android:background="@color/deep_purple_800"
        android:layout_below="@+id/text_motivation_phrase"
        android:layout_centerInParent="true"/>

    <Button
        android:id="@+id/button_new_phrase"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/new_phrase"
        android:layout_below="@+id/text_motivation_phrase"
        android:layout_centerInParent="true"
        android:textColor="@color/white"
        android:backgroundTint="@color/purple"
        android:layout_marginTop="200dp"
        android:textAllCaps="true"/>

</RelativeLayout>